@@ -2,8 +2,14 @@ plugins {
     kotlin("jvm")
 }
 
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(25))
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(25)
     compilerOptions.jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21)
 }
 
@@ -24,5 +30,5 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("-Dio.netty.leakDetection.level=paranoid")
+    jvmArgs("-Dio.netty.leakDetection.level=paranoid", "--enable-native-access=ALL-UNNAMED")
 }
